--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -161,13 +161,18 @@ body{
     cursor: pointer;
 }
 
-.header__account_photo_icon{
+.header__account_photo img{
+    width: 100%;
+    height: 2.5em;
+}
+
+/* .header__account_photo_icon{
     font-size: 2.1em;
 }
 
 .header__account_photo_icon:hover{
     cursor: pointer;
-}
+} */
 
 /* Header CSS end */
 
