--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -321,3 +321,252 @@ body{
 /* Sidebar CSS end */
 
 /* --------------------------------------------------------------------------------------------------------- */
+
+/* Right Sidebar CSS start*/
+
+.rightSideBar__Container{
+    background-color: #0f0f0f;
+    height: 100vh;
+    min-width: 27%;
+    position: fixed;
+    right:0;
+    top:4em;
+
+    display: grid;
+    grid-template-rows: 1.2fr 1fr;
+    color:white;
+}
+
+
+
+.right__current_playlist_container{
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 1em;   
+}
+
+.right__current_playlist_info{
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    padding: 1em;
+
+    background-color:hsl(0, 0%, 18.82%);
+
+    border-radius: 10px 10px 0px 0px;
+    border-color:hsl(0, 0%, 18.82%);
+}
+
+.right__current_playlist_name{
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    /* padding: 0em 0.5em 0.2em 0.5em; */
+}
+
+.right__current_channel_info{
+    display: flex;
+    justify-self: left;
+    align-items:start;
+    column-gap: 1em;
+    font-size: 0.8em;
+    color: hsl(0, 2%, 75%);
+    /* padding: 0.2em 0.5em 0em 0.7em; */
+}
+
+.right__current_videos{ 
+    height: 20rem;
+    overflow-y:scroll;
+
+    display: grid;
+    /* row-gap: 0.5em; */
+    border-radius: 0px 0px 10px 10px;
+    border-left: 2px solid hsl(0, 0%, 18.82%);
+    border-right: 2px solid hsl(0, 0%, 18.82%);
+    border-bottom: 2px solid hsl(0, 0%, 18.82%);
+}
+
+.right__video_preview_container:hover:nth-child(n){
+    cursor: pointer;
+    background-color: hsl(0, 1%, 15%);
+}
+
+.right__video_number{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    font-size: 0.9em;
+    color: hsl(0, 2%, 75%);
+
+}
+
+.right__video_info{
+    display: grid;
+    /* grid-template-rows: 1fr 1fr; */
+}
+
+.right__video_title{
+    /* display: flex; */
+    align-items: start;
+    padding-top: 0.3em;
+    font-size:0.9em;
+    width:15.5em;
+    font-weight: bold;
+    /* text-overflow: ellipsis; */
+    /* white-space: nowrap;
+    overflow: hidden; */
+
+    /* background-color: aquamarine; */
+}
+
+.right__video_thumbnail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.right__video_thumbnail_container{
+    /* background-color: white; */
+    width: 6em;
+    height: 3.5em;
+    box-sizing: border-box;
+    border-radius: 7px;
+    position: relative;
+}
+
+.right__video_thumbnail_preview{
+    height: 100%;
+    width: 100%;
+    border-radius: 7px;
+}
+
+.right__time_container{
+    position: absolute;
+    bottom:0.5em;
+    right: 0.5em;
+    font-size: 0.7em;
+    background-color: hsl(0, 0%, 7%);
+    padding: 0.2em 0.4em 0.2em 0.4em;
+    border-radius: 4px;
+    border: none;
+}
+
+.right__video_owner{
+    display: flex;
+    align-items: start;
+    font-size:0.7em;
+    color: hsl(0, 2%, 75%);
+}
+
+.right__video_preview_container{
+    display: grid;
+    height: 4em;
+    grid-template-columns: 0.1fr 2.3fr 5fr;
+    padding: 0.3em 0em 0.2em 0em;
+}
+
+
+.rightsidebar__other_playlist_container{
+    padding: 1em;
+}
+
+.rightsidebar__other_playlist{
+    height:16em;
+
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+}
+
+.rightsidebar__other_playlist_title{
+    font-size: 1.2em;
+    font-weight: bold;
+    padding: 0.6em 1em 0.6em 1em;
+    box-sizing: border-box;
+    background-color: hsl(0, 0%, 18.82%);
+    border-radius: 10px 10px 0px 0px;
+}
+
+.rightsidebar__other_playlist_preview{
+    display: grid;
+    overflow-y: scroll;
+    border: 2px solid hsl(0, 1%, 15%);
+}
+
+.rightsidebar__other_playlist_preview > div:nth-child(n):hover{
+    cursor: pointer;
+    background-color: hsl(0, 1%, 15%);
+}
+
+.rightsidebar__other_playlist_box{
+    display: grid;
+    grid-template-columns: 1fr 2.2fr;
+    height: 4.5em;
+}
+
+.rightsidebar__playlist_image_container{
+    padding: 0.3em 0.3em 0.3em 0.5em;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rightsidebar__playlist_image_box{
+    height: 3.8em;
+    width: 6.5em;
+    position: relative;
+}
+
+.rightsidebar__playlist_totalnumber{
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(15, 15, 15, 0.5);
+    width: 100%;
+    padding-top: 0.1em;
+    padding-bottom: 0.1em;
+    font-size: 0.8em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.playlist_icon_others{
+    padding-right: 0.4em;
+    padding-left: 0.4em;
+    font-size: 0.7em;
+}
+
+.rightsidebar__playlist_image{
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.rightsidebar__playlist_info_container{
+    display: grid;
+    padding-left: 0.4em;
+}
+
+.rightsidebar__playlist_info_title{
+    font-size: 0.9em;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    width: 16em;
+    overflow: hidden;
+}
+
+.rightsidebar__playlist_info_owner{
+    font-size: 0.7em;
+    color: hsl(0, 2%, 75%);
+    display: flex;
+    align-items: start;
+}
+
+/* Right Sidebar CSS end*/
+
+/* --------------------------------------------------------------------------------------------------------- */
