--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -318,6 +318,8 @@ body{
     background-color: #0f0f0f;
 }
 
+/* embedded link */
+
 /* Sidebar CSS end */
 
 /* --------------------------------------------------------------------------------------------------------- */
