--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -608,38 +608,200 @@ body{
     border-radius: 10px;
 }
 
-/* channel page */
+
+/*-------------------------------------------------------------------------------------------------------*/
+
+/* channel page start */
+
 .channel_page_container{
     top:4em;
-    height: 10em;
+    /* height: 10em; */
+    height: 87vh;
+    padding: 0.5em 0em 1.5em 0em;
     position: relative;
     width: var(--max-width-main);
     left: var(--leftSpacing);
     border-width: 50px;
-    border-color: greenyellow;
 }
 .channel_info_container{
     background-color: rgb(46, 46, 46);
-    height: 7.5em;
+    /* height: 7.5em; */
     display: flex;
     justify-content: left;
+    align-items: center;
+    padding: 1em 1.5em 1em 1.5em;
+    margin: 0em 1.5em 0em 1.5em;
+    border-radius: 10px;
 }
+
 .channel_info_container img{
     padding: 0.3em;
     margin-right: 1em;
-    width: 12.5%;
+    /* width: 12.5%; */
+    height: 6em;
 }
 .channel_info_container h1{
     align-self: center;
 }
 .channel_video_container{
     display: grid;
-    padding: 0.4em;
+    /* padding: 0.4em; */
+    min-height: 73vh;
+    background-color: #0f0f0f;
 }
-.channel_playlist_container{
+/* .channel_playlist_container{
     display: grid;
     padding: 0.4em;
+    background-color: violet;
+} */
+
+.channel_video_list{
+    margin: 1.5em;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: hsl(0, 0%, 18.82%);
+    display: grid;
+    grid-template-rows: 3em 7fr;
 }
-/* Video Playback CSS start */
+
+/* .video_type_heading, .channel_video_preview_container{
+    border:1px solid white;
+} */
+
+.front_playlist{
+    display: none;
+}
+
+.video_type_heading{
+    display: flex;
+    align-items: center;
+    /* padding: 0em 1em 0em 1em; */
+    color:white;
+    font-weight: 600;
+    font-size:1.2em;
+    border-bottom: 1px solid hsl(0, 0%, 18.82%);
+}
+
+.front_video_section_title, .front_playlist_section_title{
+    flex: 0.3;
+    display: flex;
+    justify-content: center;
+    align-items:end;
+    height: 100%;
+    border-bottom: 5px solid #0f0f0f;
+    transition: all 0.19s;
+    padding: 0em 0em 0.3em 0em;
+    box-sizing: border-box;
+}
+
+.front_video_section_title{
+    border-color: white;
+}
+
+.front_video_section_title:hover, .front_playlist_section_title:hover{
+    border-bottom: 5px solid white;
+    background-color: hsl(0, 0%, 18.82%);
+    cursor: pointer;
+}
+
+
+:root{
+    --height-front-video-preview:6em;
+}
+
+.front_video_container{
+    display: grid;
+    grid-template-columns: 1fr 2.5fr;
+    padding: 0.7em 0.5em 0.9em 0.5em;
+    /* border:2px solid red; */
+    height:var(--height-front-video-preview);
+}
+
+.front_thumbnail_container{
+    /* border:1px solid pink; */
+    /* background-color: violet; */
+    position: relative;
+}
+
+.front_video_time{
+    position: absolute;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.8em;
+    color:white;
+    height: 1.3em;
+    width: 2.4em;
+    bottom: 0.5em;
+    right: 0.5em;
+    border-radius: 4px;
+    padding: 0.3em 0.6em 0.3em 0.6em;
+    /* z-index:10; */
+}
+
+
+.front_thumbnail{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.front_video_title{
+    display: flex;
+    padding: 0.5em 1em 0.5em 1em;
+    word-wrap: break-word;
+    color:white;
+    font-size: 1.1em;
+}
+
+.front_video_container:hover{
+    background-color: hsl(0, 0%, 18.82%);
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.front_playlist_info_container{
+    position: absolute;
+    background-color: rgba(15, 15, 15, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.8em;
+    color:white;
+    height: 1.3em;
+    width: 100%;
+    bottom: 0;
+    right: 0;
+    border-radius: 0px 0px 8px 8px;
+    padding: 1.3em 0.6em 1.3em 0.6em;
+    box-sizing: border-box;
+    column-gap: 0.5em;
+    /* z-index:10; */
+}
+
+.playlist_icon_others_front{
+    font-size: 1em;
+}
+
+.front_playlist_total_count{
+
+}
+
+.front_channel_name_yt{
+    /* display: flex; */
+    align-items: center;
+    font-size: 1.6em;
+    font-weight: 700;
+    color:white;
+    min-width:18em;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+
+/* channel page start */
 
 /* --------------------------------------------------------------------------------------------------------- */
