--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -162,16 +162,16 @@ body{
     cursor: pointer;
 }
 
-#header__account_photo img{
+.header__account_photo img{
     width: 100%;
     height: 2.5em;
 }
 
-#header__account_photo{
+.header__account_photo{
     position: relative;
 }
 
-#header__account_photo img:hover{
+.header__account_photo img:hover{
     cursor: pointer;
 }
 
